--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	
 </head>
 <body>
-		<input type="text" id="begin_page" name="begin_page" placeholder="Nhập vào số trang bắt đầu"><br>
+		<!-- <input type="text" id="begin_page" name="begin_page" placeholder="Nhập vào số trang bắt đầu"><br>
 		<input type="text" id="end_page" name="end_page" placeholder="Nhập vào số trang kết thúc"><br>
-		<button type="button" id="print">Page Output</button>
+		<button type="button" id="print">Page Output</button> -->
 		<!--script src="bootstrap4.0/js/bootstrap.min.js"></script>-->
-		<script src="js/3-1.js"></script>	
+		<script src="js/list.js"></script>	
 </body>
 </html>
