--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Learn Web 1</title>
-	<!-- <link rel="stylesheet" type="text/css" href="bootstrap4.0/css/bootstrap.min.css"/>  -->
-		<link rel="stylesheet" type="text/css" href="css/reset.css"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="bootstrap4.0/css/bootstrap.css"/>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous"> 
+		<!-- <link rel="stylesheet" type="text/css" href="css/reset.css"/>
+		<link rel="stylesheet" type="text/css" href="css/style.css"/> -->
 	
 </head>
 <body>
-		<!-- <input type="text" id="begin_page" name="begin_page" placeholder="Nhập vào số trang bắt đầu"><br>
+		<input type="text" id="begin_page" name="begin_page" placeholder="Nhập vào số trang bắt đầu"><br>
 		<input type="text" id="end_page" name="end_page" placeholder="Nhập vào số trang kết thúc"><br>
-		<button type="button" id="print">Page Output</button> -->
+		<button type="button" id="print">Page Output</button>
 		<!--script src="bootstrap4.0/js/bootstrap.min.js"></script>-->
-		<script src="js/list.js"></script>	
+		
+		
+		<script src="js/3-1.js"></script>	
 </body>
 </html>
