learn stack, queue

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 		<input type="text" id="end_page" name="end_page" placeholder="Nhập vào số trang kết thúc"><br>
 		<button type="button" id="print">Page Output</button> -->
 		<!--script src="bootstrap4.0/js/bootstrap.min.js"></script>-->
-		<script src="js/list.js"></script>	
+		<script src="practice/queue.js"></script>	
 </body>
 </html>
