--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<!--script src="bootstrap4.0/js/bootstrap.min.js"></script>-->
 		
 		
-		<script src="js/3-1.js"></script>	
+
+		<script src="js/3.js"></script>	
 </body>
 </html>
