new update for practice 12/09/2019

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Learn Web 1</title>
-	<link rel="stylesheet" type="text/css" href="bootstrap4.0/css/bootstrap.css"/>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous"> 
+	<!--link rel="stylesheet" type="text/css" href="bootstrap4.0/css/bootstrap.css"/> -->
+	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">  -->
 		<!-- <link rel="stylesheet" type="text/css" href="css/reset.css"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/> -->
 	
 </head>
 <body>
-		<input type="text" id="begin_page" name="begin_page" placeholder="Nhập vào số trang bắt đầu"><br>
+		<!-- <input type="text" id="begin_page" name="begin_page" placeholder="Nhập vào số trang bắt đầu"><br>
 		<input type="text" id="end_page" name="end_page" placeholder="Nhập vào số trang kết thúc"><br>
-		<button type="button" id="print">Page Output</button>
-		<!--script src="bootstrap4.0/js/bootstrap.min.js"></script>-->
-<<<<<<< HEAD
-		<script src="practice/queue.js"></script>	
-=======
+		<button type="button" id="print">Page Output</button> -->
+		<!-- <script src="bootstrap4.0/js/bootstrap.min.js"></script> -->
+		<div id="test">
+			<div>Noi dung cua file html</div>
+			<button class="btn" value="CLICK">click here</button>
+		</div>
+
+		<script src="practice/flag.js"></script>	
 		
-		
-		<script src="js/3-1.js"></script>	
->>>>>>> 5c9ef28f6b80175c8d248787cc38d1719d437813
 </body>
 </html>
