--- a/practice/webcall.html
+++ b/practice/webcall.html
@@ -2,18 +2,37 @@
 <html>
 <head>
 	<title>Test WebCall with SipJS.com</title>
+	<link rel="stylesheet" type="text/css" href="../css/webcall.css">
 </head>
 <body>
+	<div id="container">
+		<!-- <div id="config">
+			<form id="config-form" action="">
+				<div id="dangnhap">
+					<label>Ten dang nhap:<input type="text" id="user" class="input" name="authorizationUser" placeholder = "300x  | haidn4"/></label>
+				</div>
+				<div id="pass">
+					<label>Mat khau:<input type="password" class="input" name="password" /></label>
+				</div>
+				<input type="submit" name="configSubmit" id="submit" value="Dang Nhap"/>
+			</form>
+		</div> -->
 
-	<div id="area-1">
-		<button id="ua-regis">Register</button>
-		<p id="ua-status">status</p>
-	</div>
-
-	<div id="area-2"> 
-		<button id="call">Call</button>	
-		<button id="endcall">End Call</button>
-	</div>
+		
+		<div id="area-1">
+			<button id="ua-regis" class="button">Register</button>
+			<p id="ua-status">status</p>
+		</div>
+		<label>SIP URI:<input type="text" id="ua-uri" class="input" placeholder="ex: haidn4@freeswitch.ddns.net"/></label>
+		<div id="area-2"> 
+			<button id="call" class="button">Call</button>	
+			<button id="endcall" class="button">End Call</button>
+		</div>
+		<div>
+			<p id="displayname">Callee</p>
+			<p id="result">Result:</p>
+		</div>
+	</div><!--end div container -->
 	<script src="../js/sip-0.7.3.js"></script>
 	<script src="../js/webcall.js"></script>
 	<!--script src="../js/https_redirect.js"></script>-->
