--- a/practice/test.html
+++ b/practice/test.html
@@ -6,18 +6,21 @@
 <body>
 
 <script>
-	var names = ["David", "John", "Napole"];
-	putstr("Enter a name to search for: ");
-	var name = readline();
-	var position = names.indexOf(name);
-	if (position > = 0)
-	{
-		print("Found" +name + " at position " + position);
-	}
-	else
-	{
-		print(name + " not found in array.");
-	}
-</script>	
+	// var names = ["David", "John", "Napole"];
+	// putstr("Enter a name to search for: ");
+	// var name = readline();
+	// var position = names.indexOf(name);
+	// if (position > = 0)
+	// {
+	// 	print("Found" +name + " at position " + position);
+	// }
+	// else
+	// {
+	// 	print(name + " not found in array.");
+	// }
+</script>
+
+
+	<script src="../js/test.js"></script>
 </body>
 </html>
