--- a/practice/webcall.html
+++ b/practice/webcall.html
@@ -29,7 +29,9 @@
 			<button id="startCall" class="button">Start Call</button>	
 			<button id="endCall" class="button">End Call</button>
 			<br>
-			<video id="remoteVideo" muted="muted" width="128px" height="96px"></video>
+			<video id="remoteVideo"></video>
+			<br>
+			<video id="localVideo" muted="muted" width="128px" height="96px"></video>
 		</div>
 		<div>
 			<p id="displayname">Callee</p>
@@ -39,7 +41,7 @@
 	</div><!--end div container -->
 	<script src="../js/sip-0.7.3.js"></script>
 	<!--script src="../js/sip-0.13.6.js"></script>-->
-	<script src="../js/webcall1.js"></script>
+	<script src="../js/call.js"></script>
 	<!--script src="../js/https_redirect.js"></script>-->
 </body>
 </html>
