test successful webrtc

--- a/practice/webcall2.html
+++ b/practice/webcall2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<button id="endCall">End Call</button>
+	<button id="endCall" class="button">End Call</button>
 	<br>
 	<video id="remoteVideo"></video>
 	<br>
