new update call.js

--- a/practice/toggle.html
+++ b/practice/toggle.html
@@ -4,6 +4,8 @@
 	<title>Toggle-1</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../css/toggle-1.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -14,6 +16,13 @@
 <div id="myDIV">
 	This is an area to show result of testing "toggle".
 </div> 
+
+<p>Click on the iconn to toggle between thumbs-down (like/dislike):</p>
+<i onclick="myFunction1(this)" class="fa fa-thumbs-up"></i>
+
+<input type="checkbox" checked data-toggle="toggle" data-style="ios">
+
 <script src="../js/toggle-1.js"></script>
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 </body>
 </html>
