--- a/030.querySelectorAll/30.html
+++ b/030.querySelectorAll/30.html
@@ -7,17 +7,24 @@
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome.css">
-	<link rel="stylesheet" type="text/css" href="css/1.css">
+	<link rel="stylesheet" type="text/css" href="css/30.css">
 </head>
 <body>
+
+
+<!-- 	<div id="nd">Noi Dung</div>
+	<div class="nd2" data-thongbao="Day la dai tieng noi Viet Nam!">Thong Bao</div> -->
+
 	<div class="card-columns">
+
 		<div class="card">
-			<img class="card-img-top" data-src="holder.js/100%x160/" alt="Card image cap">
+			<img class="card-img-top" data-src="holder.js/140x140" alt="Card image cap"/>
 			<div class="card-block">
-				<h4 class="card-title">{1:Card title that wraps to a new line - div1}</h4>
-				<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				<h4 class="card-title">{1:Card title that wraps to a new line}</h4>
+				<p class="card-text">1.This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 			</div>
 		</div>
+
 		<div class="card card-block">
 			<blockquote class="card-blockquote">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -28,17 +35,19 @@
 				</footer>
 			</blockquote>
 		</div>
+
 		<div class="card">
-			<img class="card-img-top" data-src="holder.js/100%x160/" alt="Card image cap">
+			<img class="card-img-top" data-src="https://cdn.rawgit.com/imsky/holder/master/holder.js/300x200" alt="Card image cap">
 			<div class="card-block">
 				<h4 class="card-title">Card title</h4>
-				<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				<p class="card-text">2.This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 				<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 			</div>
 		</div>
+
 		<div class="card card-block card-inverse card-primary text-center">
 			<blockquote class="card-blockquote">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+				<p>3.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
 				<footer>
 					<small>
 						Someone famous in <cite title="Source Title">Source Title</cite>
@@ -46,17 +55,20 @@
 				</footer>
 			</blockquote>
 		</div>
+
 		<div class="card card-block text-center">
 			<h4 class="card-title">Card title</h4>
-			<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-			<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+			<p class="card-text">4.This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+			<p class="card-text x"><small class="text-muted">xxx-xxx-xxx-Last updated 3 mins ago</small></p>
 		</div>
+
 		<div class="card">
 			<img class="card-img" data-src="holder.js/100%x160/" alt="Card image cap">
 		</div>
+
 		<div class="card card-block text-right">
 			<blockquote class="card-blockquote">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+				<p>5.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
 				<footer>
 					<small class="text-muted">
 						Someone famous in <cite title="Source Title">Source Title</cite>
@@ -64,14 +76,17 @@
 				</footer>
 			</blockquote>
 		</div>
-		<div class="card card-block">
+
+		<div class="card card-block x">
 			<h4 class="card-title">Card title</h4>
-			<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+			<p class="card-text">6-xxx-xxx.This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 			<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 		</div>
+
 	</div>
 
-	<script type="text/javascript" src="js/1.js"></script> 
-	<script type="text/javascript" src="holder.js"></script>
+	<script type="text/javascript" src="js/30.js"></script> 
+	<!-- <script type="text/javascript" src="holder.js"></script> -->
+	<scirpt type="text/javascript" src="https://cdn.rawgit.com/imsky/holder/master/holder.js"</scirpt>
 </body>
 </html>
