new update from laptop

--- a/practice/webcall.html
+++ b/practice/webcall.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Test WebCall with SipJS.com</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../css/webcall.css">
 </head>
 <body>
