new update layout

--- a/practice/webcall.html
+++ b/practice/webcall.html
@@ -28,6 +28,7 @@
 		</div>
 
 		<div id="area-2"> 
+			<button id="acceptCall" class="button">Accept Call</button>
 			<button id="startCall" class="button">Start Call</button>	
 			<button id="endCall" class="button">End Call</button>
 		</div>
