--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Learn Web 1</title>
-	<!--link rel="stylesheet" type="text/css" href="bootstrap4.0/css/bootstrap.css"/> -->
-	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">  -->
-		<!-- <link rel="stylesheet" type="text/css" href="css/reset.css"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/> -->
+	link rel="stylesheet" type="text/css" href="bootstrap4.0/css/bootstrap.css"/>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous"> 
+		<link rel="stylesheet" type="text/css" href="css/reset.css"/>
+		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	
 </head>
 <body>
-		<!-- <input type="text" id="begin_page" name="begin_page" placeholder="Nhập vào số trang bắt đầu"><br>
+		<input type="text" id="begin_page" name="begin_page" placeholder="Nhập vào số trang bắt đầu"><br>
 		<input type="text" id="end_page" name="end_page" placeholder="Nhập vào số trang kết thúc"><br>
-<<<<<<< HEAD
+
 		<button type="button" id="print">Page Output</button>
 		<script src="bootstrap4.0/js/bootstrap.min.js"></script>
 
 		<script src="js/3.js"></script>	
-=======
-		<button type="button" id="print">Page Output</button> -->
-		<!-- <script src="bootstrap4.0/js/bootstrap.min.js"></script> -->
+
+		<button type="button" id="print">Page Output</button>
+		<script src="bootstrap4.0/js/bootstrap.min.js"></script>
 <!-- TEST onclick Events == -->		
 		<!-- <div>
 			<div>Noi dung cua file html</div>
@@ -41,13 +41,13 @@
 </script> -->		
 
 	<!--Phan biet method: click() va submit()-->
-	<form id="test" action="">
+	<!-- <form id="test" action="">
 		<input type="text" id="text" placeholder="Nhap vao noi dung: ">
 		<button type="button" id="getdata">Show Noi Dung</button>
 	</form> 
 		<button type="submit" id="changevalue">Change Noi Dung</button>
 
-	<script src="practice/clickandsubmit.js"></script>
+	<script src="practice/clickandsubmit.js"></script> -->
 		
 
 </body>
